--- a/resume.css
+++ b/resume.css
@@ -78,6 +78,8 @@ body{
         border-radius: 50%;
         border: 8px solid #FF4500;
         margin-right: 10%;
+        width: 400px;
+        height: 400px;
 }
 #my-intro{
         align-content: center;
@@ -86,6 +88,7 @@ body{
 #my-intro h3{
         font-size:x-large;
         font-weight: bolder;
+        font-family: Arial, Helvetica, sans-serif;
 }
 #my-intro input{
         color: #FF4500;
@@ -109,19 +112,21 @@ body{
 
 /*Skilss*/
 .headings{
+        margin-top: 3%;
         font-size: x-large;
         font-weight: bolder;
         font-family:Georgia, 'Times New Roman', Times, serif;
 }
-#working{
-        margin-top: -50px;
-}
-#skills,#projects,#trainings{
+
+#skills,#projects{
         margin-top: 3%;
 }
 #skills h4{
         font-size: 25px;
-        margin-top: -0.1%;
+        margin-top: -0.%;
+}
+#trainings{
+        margin-top: 5%;
 }
 #resume-download{
         color: black;
@@ -134,13 +139,16 @@ body{
         border: 0;
         transition: 1s;
         cursor:pointer;
-        margin-top: 40%;
+        margin-top: 50%;
         align-items: center;
 }
 #resume-download:hover{
         color: #FF4500;
         background-color: black;
         border: 5px solid #FF4500;
+}
+#bt-navigations{
+        margin-top: 3.65%;
 }
 
 
@@ -168,3 +176,94 @@ footer{
 #social-contact a:hover{
         border: 2px solid white;
 }
+
+
+/*Carousel for training and projects*/
+    .slideshow{
+        width: 100%;
+        position: relative;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        align-items: center;
+        margin-top: 2.5%;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    #project0,#project4,#project5,#project6,#project7,#project8,#project9{
+        display: none;
+    }
+    #training1,#training5{
+        display: none;
+    }
+    .slides{
+        display: flexbox;
+        flex-direction: column;
+        align-content: flex-star;
+        align-items: flex-start;
+        margin-top: 20px;
+        width: 400px;
+        height: 395px;
+        background-color: white;
+        box-shadow:5px 5px 25px  rgba(134, 134, 134, 0.466); 
+        margin-right: 1.5%;
+        margin-left: 1.5%;
+        padding-left: 3%;
+        padding-right: 2%;
+        border-left: 3px solid #FF4500;
+        
+    }
+    .project-image{
+            width: 95%;
+            height: 150px;
+    }
+    .project-details{
+         color: black;
+        white-space: pre-line;
+        margin-top: -10px;
+        width: 100%;
+    }
+    .project-details a{
+            text-decoration: none;
+            color: rgb(245, 37, 0);
+    }
+    .project-details a:hover{
+            text-decoration:underline;
+    }
+    .domain{
+        margin-top: -20px;
+        color: #000000;
+        opacity: 0.7;
+    }
+    
+    #date{
+        color: #000000;
+        opacity: 0.3;
+        font-size: small;
+        margin-left: 2%;
+    }
+    .slides h5{
+        font-weight: bolder;
+        margin-top: -0.5px;
+    }
+    .slides h4{
+        color: #FF4500;
+        width: 100%;
+    }
+    .slides p{
+        opacity: 0.7;
+    }
+    .readMore{
+        color: #FF4500;
+        font-weight: bold;
+        font-size:medium;
+        width: 110px;
+        height: 38px;
+        background-color: white;
+        border-radius: 8px;
+        border: 3px solid #FF4500;
+        transition: 1s;
+        cursor:pointer;
+        
+    }
+    
